test/error/ast/AddExprDifferenTypes.mod
MODULE AddExprDifferenTypes;
VAR a: INTEGER; b: REAL; r: REAL;
BEGIN
  r := a + b;
END AddExprDifferenTypes.
